# tts-tutorial

./: Dockerfile  README.md
festiv-et-al/festival/config/modules/: Makefile
festiv-et-al/festival/src/modules/Sparrowhawk/: Makefile  Sparrowhawk.cc  Sparrowhawk.h
festiv-et-al/sparrowhawk/src/include/sparrowhawk/: normalizer.h
festiv-et-al/speech_tools/config/compilers/: gcc_defaults.mak
festiv-et-al/thrax-1.2.2/: AUTHORS  README  configure  configure.ac
festiv-et-al/thrax-1.2.2/src/grammars/: Makefile.in  ernest.txt  paradigms_and_features.grm  pdt.grm
festiv-et-al/thrax-1.2.2/src/include/: Makefile.am  Makefile.in
festiv-et-al/thrax-1.2.2/src/include/thrax/: assert-equal.h  cdrewrite.h  compose.h  concat.h  datatype.h  difference.h  evaluator.h  expand.h  features.h  fst-node.h  function.h  grm-compiler.h  grm-manager.h  identifier-counter.h  identifier-node.h  import-node.h  lexer.h  loadfstfromfar.h  make-parens-pair-vector.h  mpdtcompose.h  pdtcompose.h  printer.h  project.h  return-node.h  rewrite.h  rmepsilon.h  rule-node.h  symbols.h  symboltable.h  walker.h
festiv-et-al/thrax-1.2.2/src/include/thrax/algo/: cdrewrite.h  optimize.h  prefix_tree.h  resource-map.h
festiv-et-al/thrax-1.2.2/src/include/thrax/compat/: compat.h  oneof.h  registry.h  stlfunctions.h
festiv-et-al/thrax-1.2.2/src/lib/: Makefile.in
festiv-et-al/thrax-1.2.2/src/lib/ast/: collection-node.cc  fst-node.cc  identifier-node.cc  import-node.cc  return-node.cc  string-node.cc
festiv-et-al/thrax-1.2.2/src/lib/main/: compiler-log.cc  grm-compiler.cc  lexer.cc  parser.yy
festiv-et-al/thrax-1.2.2/src/lib/util/: utils.cc
festiv-et-al/thrax-1.2.2/src/lib/walker/: loader.cc  namespace.cc  printer.cc
festiv-et-al/thrax-1.2.2/src/utils/: Makefile.in  thraxgrm.vim
usr_local/share/sparrowhawk/af/: tokenize_and_classify.far  tokenizer.ascii_proto  verbalizer.ascii_proto
usr_local/src/: test_sparrowhawk.scm
usr_local/src/af_g2p/: graphone.syms
usr_local/src/festival/: COPYING
usr_local/src/festival/config/: config.in
usr_local/src/festival/config/modules/: Sparrowhawk.mak
usr_local/src/festival/lib/voices/af/sparrowhawk_test_null/festvox/: sparrowhawk_test_null.scm
usr_local/src/festival/src/modules/: Makefile
usr_local/src/g2p/: g2p.sh  graphone_model.fst  lex_regular.txt  phonemes_to_graphones.fst
usr_local/src/g2p/models/af/: bytes_to_graphones.fst
usr_local/src/g2p/runtime/: GNUmakefile
usr_local/src/goog_af_unison_text/: sparrowhawk_voice.patch
usr_local/src/textnorm_exercise/: byte.grm  factorization.grm  number_names.grm  number_names.tsv  number_names_exercise.grm  tester.py
usr_local/src/thrax-1.2.2/: COPYING  Makefile.in  NEWS
usr_local/src/thrax-1.2.2/src/: Makefile.am  Makefile.in
usr_local/src/thrax-1.2.2/src/grammars/: Makefile.am  README  assert.grm  bytestringcopy.grm  example.grm  mpdt.grm  numbers.grm  replace.grm
usr_local/src/thrax-1.2.2/src/include/thrax/: abstract-grm-manager.h  arcsort.h  assert-empty.h  assert-null.h  closure.h  collection-node.h  compiler.h  config.h.in  connect.h  determinize.h  evaluator.h  function-node.h  grammar-node.h  invert.h  loadfst.h  make-parens-pair-vector.h  minimize.h  namespace.h  node.h  optimize.h  paradigm.h  replace.h  reverse.h  statement-node.h  string-node.h  stringfile.h  stringfst.h  thrax.h  union.h
usr_local/src/thrax-1.2.2/src/include/thrax/compat/: closure.h  utils.h
usr_local/src/thrax-1.2.2/src/lib/: Makefile.am
usr_local/src/thrax-1.2.2/src/lib/ast/: function-node.cc  grammar-node.cc  node.cc  rule-node.cc  statement-node.cc
usr_local/src/thrax-1.2.2/src/lib/flags/: flags.cc
usr_local/src/thrax-1.2.2/src/lib/main/: compiler-log64.cc  compiler-stdarc.cc  grm-manager.cc  parser.cc
usr_local/src/thrax-1.2.2/src/lib/walker/: evaluator-specializations.cc  identifier-counter.cc  stringfst.cc  symbols.cc  walker.cc
usr_local/src/thrax-1.2.2/src/utils/: Makefile.am  thrax-mode.el
