algo_include_headers = thrax/algo/cdrewrite.h \
		       thrax/algo/prefix_tree.h thrax/algo/resource-map.h \
		       thrax/algo/optimize.h

compat_include_headers = thrax/compat/compat.h \
			 thrax/compat/closure.h thrax/compat/oneof.h \
			 thrax/compat/registry.h thrax/compat/stlfunctions.h \
			 thrax/compat/utils.h

grm_include_headers = thrax/arcsort.h thrax/assert-equal.h \
		      thrax/assert-empty.h thrax/assert-null.h thrax/cdrewrite.h \
		      thrax/closure.h thrax/compiler.h \
		      thrax/collection-node.h thrax/compose.h thrax/concat.h \
		      thrax/connect.h thrax/datatype.h thrax/determinize.h \
		      thrax/difference.h thrax/evaluator.h thrax/expand.h \
		      thrax/features.h \
		      thrax/fst-node.h thrax/function.h thrax/function-node.h \
		      thrax/grammar-node.h thrax/grm-compiler.h \
		      thrax/abstract-grm-manager.h thrax/grm-manager.h \
		      thrax/identifier-counter.h thrax/identifier-node.h \
		      thrax/import-node.h thrax/invert.h thrax/lexer.h \
		      thrax/make-parens-pair-vector.h \
		      thrax/loadfstfromfar.h thrax/loadfst.h thrax/minimize.h \
		      thrax/mpdtcompose.h \
		      thrax/namespace.h thrax/node.h thrax/optimize.h \
		      thrax/paradigm.h thrax/pdtcompose.h thrax/printer.h \
		      thrax/project.h thrax/return-node.h thrax/reverse.h thrax/rewrite.h \
		      thrax/rmepsilon.h thrax/rule-node.h thrax/statement-node.h \
		      thrax/stringfile.h thrax/stringfst.h thrax/string-node.h \
		      thrax/symbols.h thrax/symboltable.h thrax/thrax.h thrax/union.h\
		      thrax/walker.h thrax/replace.h

nobase_include_HEADERS = $(algo_include_headers) $(compat_include_headers) \
			 $(grm_include_headers)
